# pubmedpg

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  allids.py  docker-compose.yml  license.txt  pyproject.toml
src/: PubMedParser.py  pub_med_parser.py  python_pre_start.py
src/alembic/: env.py
src/alembic/versions/: 2084deb7f2ef_create_account_table.py  37e23d2199a0_increase_collective_name_length.py  405a03f1a932_reduce_more_lengths.py  44b265204928_initial_migration.py  46f5b94b2d2e_reduce_collective_name_length.py  50ab80b0c759_increase_journal_iso_abbrev_length.py  55b2fef2f80f_create_account_table.py  84a40922c9c1_create_account_table.py  881b8f8f05d6_create_account_table.py  ae0374b367af_initial_db_structure.py  cb2fce4ff7c6_increase_journal_volume_issue_length.py  d3a2d5b30f78_initial_db_structure.py
src/pubmedpg/: __init__.py
src/pubmedpg/core/: config.py
src/pubmedpg/db/: PubMedDB.py  base.py  base_class.py  session.py
src/pubmedpg/models/: __init__.py  pubmed.py
src/scripts/: prestart.sh  start.sh
tests/: test_pubmed_portable.py
