[tool.poetry]
name = "pubmedpg"
version = "0.1.0"
description = ""
authors = ["Anton Melser <anton@melser.org>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = {extras = ["asyncio", "mypy"], version = "^1.4.36"}
pydantic = "^1.9.1"
asyncpg = "^0.25.0"
tenacity = "^8.0.1"
alembic = "^1.7.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
